@@ -1,3 +1,9 @@
+2007-10-09  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-helpers.c
+		- (read_one_setting_value_from_gconf): don't warn on failed reads from
+			GConf (ie, where key doesn't exist)
+
 2007-10-09  Tambet Ingo  <tambet@gmail.com>
 
 	Now with 100% less compiler warnings!
